--- a/build.gradle
+++ b/build.gradle
@@ -56,7 +56,6 @@ dependencies
     compile 'net.sf.trove4j:trove4j:3.0.3'
     compile group: 'org.scream3r', name: 'jssc', version: '2.8.0'
 
-
     compile group: 'junit', name: 'junit', version: '4.+'
     testCompile group: 'junit', name: 'junit', version: '4.+'
 }
@@ -101,16 +100,17 @@ uploadArchives
     {
         mavenDeployer 
         {
-            repository(url: "file:../Repos/")
+            repository(url: "file:../../Repos/")
         }
     }
 }
 
-
+/*
 apply plugin: 'executable-jar'
 
+
 // This is the class that starts your application
-mainClass = 'egg3d.server.Egg3DTCPServer'
+executable-jar.mainClass = 'egg3d.server.Egg3DTCPServer'
 
 buildscript {
     repositories {
@@ -120,6 +120,7 @@ buildscript {
         classpath 'net.nisgits.gradle:gradle-executable-jar-plugin:1.7.0'
     }
 }
+/**/
 
 
 
