--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,12 @@
+plugins {
+  id "us.kirchmeier.capsule" version "0.9.0"
+}
+
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'maven'
+
+
 
 sourceSets 
 {
@@ -105,22 +111,13 @@ uploadArchives
     }
 }
 
-/*
-apply plugin: 'executable-jar'
 
-
-// This is the class that starts your application
-executable-jar.mainClass = 'egg3d.server.Egg3DTCPServer'
-
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath 'net.nisgits.gradle:gradle-executable-jar-plugin:1.7.0'
-    }
+task fatCapsule(type: FatCapsule) {
+  applicationClass 'egg3d.server.Egg3DTCPServer'
+  reallyExecutable
 }
-/**/
+
+
 
 
 
