--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ plugins {
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'maven'
+apply plugin: 'maven-publish'
 apply plugin: 'launch4j'
 
 
